# continuum

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml
.github/workflows/: ci.yml
.sentrux/: rules.toml
continuum/: Cargo.toml  README.md
continuum-backend-mem/: Cargo.toml
continuum-backend-mem/src/: lib.rs  memory.rs
continuum-backend-mem/tests/: memory_log_backend.rs
continuum-backend-postgres/: Cargo.toml
continuum-backend-postgres/src/: lib.rs
continuum-backend-postgres/tests/: postgres_log_backend.rs
continuum-backend-scylla/: Cargo.toml
continuum-backend-scylla/src/: append_ops.rs  config.rs  error_map.rs  lib.rs  schema.rs
continuum-backend-scylla/tests/: scylla_log_backend.rs
continuum-backend-sql-common/: Cargo.toml
continuum-backend-sql-common/src/: error_map.rs  lib.rs  schema.rs
continuum-backend-sqlite/: Cargo.toml
continuum-backend-sqlite/src/: lib.rs
continuum-backend-sqlite/tests/: sqlite_log_backend.rs
continuum-backend-surreal/: Cargo.toml
continuum-backend-surreal/examples/: surreal_embedded.rs
continuum-backend-surreal/src/: lib.rs
continuum-backend-surreal/src/surreal_local/: config.rs  db_conn.rs  error_map.rs  mod.rs  schema.rs
continuum-backend-surreal/tests/: surreal_local_log_backend.rs
continuum-backend-tikv-raw/: Cargo.toml
continuum-backend-tikv-raw/src/: append_ops.rs  error_map.rs  keys.rs  lib.rs
continuum-backend-tikv-raw/tests/: tikv_raw_log_backend.rs
continuum-bench/: Cargo.toml  EXPERIMENTS.md  PERFORMANCE_STUDY.md
continuum-bench/scripts/: analyze-scylla-ceilings.py  analyze-scylla-index-scaling.py  run-concurrency-campaign.sh  run-distributed-scale-campaign.sh  run-native-preset.sh  run-partition-campaign.sh  run-scylla-ceiling-campaign.sh  run-scylla-index-scaling-campaign.sh  run-scylla-index-scaling-validate-campaign.sh  run-scylla-lever-campaign.sh  run-scylla-publishers-campaign.sh  run-scylla-topic-campaign.sh  run-scylla-track-u-campaign.sh  run-scylla-track-v-campaign.sh  run-scylla-track-x-campaign.sh  run-scylla-track-y-campaign.sh  run-sql-matrix.sh  run-tikv-aws-topology.sh  run-tikv-preset.sh
continuum-bench/src/: cli.rs  fill_results.rs  main.rs  matrix.rs  util.rs
continuum-bench/src/experiments/: bm_core.rs  bm_load.rs  bm_multi_client.rs  bm_partition.rs  fixtures.rs  mod.rs
continuum-bench/src/harness/: backend.rs  dimensions.rs  hardware.rs  mod.rs
continuum-bench/src/harness/backend/: disk.rs  mod.rs  postgres.rs  scylla.rs  sqlite.rs  surreal.rs  tikv_raw.rs
continuum-bench/src/harness/dimensions/: hardware.rs  mod.rs  scylla.rs  storage.rs  tikv.rs  topology.rs
continuum-bench/src/metrics/: growth.rs  latency.rs  mod.rs  pass_eval.rs  resource_profile.rs
continuum-bench/src/projection/: inputs.rs  mod.rs  model.rs  render.rs  scaling.rs
continuum-bench/src/report/: mod.rs  schema.rs  write.rs
continuum-core/: Cargo.toml
continuum-core/src/: error.rs  lib.rs
continuum-core/src/backend/: log_backend.rs  mod.rs
continuum-core/src/router/: evaluator.rs  key_hash_evaluator.rs  log_router.rs  mod.rs  router_key.rs
continuum-core/src/types/: checkpoint.rs  destination.rs  mod.rs  partition.rs  record.rs  seq.rs  stream.rs
continuum-core/src/validation/: mod.rs  record.rs
continuum-core/tests/: log_router.rs
continuum-telemetry/: Cargo.toml
continuum-telemetry/src/: lib.rs
continuum-telemetry/tests/: instrumented_backend.rs
continuum-test-utils/: Cargo.toml
continuum-test-utils/src/: contract.rs  fixtures.rs  lib.rs  stub.rs
continuum/examples/: checkpoint_truncate.rs  quickstart.rs  router.rs
continuum/src/: lib.rs
infra/native-aws/lib/: artifact.sh  manifest.sh  ssh.sh  topology.sh
infra/native-aws/manifests/: native-colocated.json
infra/native-aws/scripts/: artifact-fetch.sh  artifact-upload.sh  bootstrap-topology.sh  bootstrap.sh  build-al2023.sh  campaign-status-topology.sh  campaign-status.sh  collect-scylla-storage-metrics.sh  deploy-bench.sh  ensure-security-group.sh  export-env-topology.sh  export-env.sh  fetch-reports.sh  preflight-topology.sh  provision-colocated.sh  provision-topology.sh  run-campaign.sh  run-distributed-scale-all.sh  run-scylla-ceiling.sh  run-scylla-ceilings.sh  run-scylla-diagnosis.sh  run-scylla-index-scaling-master.sh  run-scylla-index-scaling-phase2-master.sh  run-scylla-index-scaling-validate.sh  run-scylla-index-scaling.sh  run-scylla-levers.sh  run-scylla-parallelism.sh  run-scylla-publishers.sh  run-scylla-topics.sh  run-scylla-track-u.sh  run-scylla-track-v.sh  run-scylla-track-w.sh  run-scylla-track-x.sh  run-scylla-track-y.sh  run-scylla-track-z.sh  run-topology-campaign-detached.sh  run-topology-campaign.sh  setup-artifact-bucket.sh  teardown-all.sh  teardown.sh  (+2 more)
infra/native-aws/state/: native-colocated-storage-end.json  native-colocated-storage-mid.json  native-scylla-2n-storage-end.json  native-scylla-2n-storage-mid.json  native-scylla-4n-storage-end.json  native-scylla-4n-storage-mid.json  scylla-ceilings.json  scylla-diagnosis.json  scylla-index-scaling-phase2.json  scylla-index-scaling.json  scylla-levers.json  scylla-parallelism.json
infra/native-aws/templates/: run-scylla.sh
infra/native-aws/topologies/: native-scylla-1n-c7i.yaml  native-scylla-1n.yaml  native-scylla-2n-c7i.yaml  native-scylla-2n.yaml  native-scylla-3n.yaml  native-scylla-4n-c7i.yaml  native-scylla-4n.yaml  native-tikv-ha-2.yaml  native-tikv-ha-3.yaml  native-tikv-scale-4-c7i.yaml  native-tikv-scale-4.yaml  native-tikv-scale-5.yaml
infra/raw-engine-bench/lib/: common.sh
infra/raw-engine-bench/props/: single-key-insert.properties  spread-insert.properties
infra/raw-engine-bench/remote/: scylla-run-all.sh  tikv-run-all.sh
infra/raw-engine-bench/results/: scylla-a.json  scylla-b.json  tikv-a.json  tikv-b.json
infra/raw-engine-bench/scripts/: bootstrap.sh  fetch-results.sh  run-scylla.sh  (+4 more)
infra/scylla/: compose.yaml
infra/surreal-tikv/: README.md  compose.yaml
infra/surreal-tikv-aws/: .gitignore
infra/tikv-raw/: compose.ci.yaml  compose.yaml
(+566 files in other folders)
