[workspace]
resolver = "2"
members = [
    "continuum",
    "continuum-core",
    "continuum-telemetry",
    "continuum-test-utils",
    "continuum-backend-mem",
    "continuum-backend-surreal",
    "continuum-backend-postgres",
    "continuum-backend-sqlite",
    "continuum-backend-sql-common",
    "continuum-backend-scylla",
    "continuum-backend-tikv-raw",
    "continuum-bench",
]

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
surrealdb = { version = "3.1", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros"] }
futures = "0.3"
sysinfo = "0.39"
tempfile = "3"
scylla = "1.7"
tikv-client = "0.4"
bincode = "1.3"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
