[package]
name = "continuum-backend-surreal"
version = "0.1.0"
edition = "2021"
authors = ["Sean O'Rourke"]
license = "MIT"
repository = "https://github.com/deathbreakfast/continuum"
description = "SurrealDB LogBackend for continuum transport log"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
continuum-core = { path = "../continuum-core" }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
surrealdb = { workspace = true, default-features = false, features = ["kv-mem"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
continuum-test-utils = { path = "../continuum-test-utils" }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
