[package]
name = "continuum"
version = "0.1.0"
edition = "2021"
authors = ["Sean O'Rourke"]
license = "MIT"
repository = "https://github.com/unified-field-dev/continuum"
description = "Append-only event/log substrate port and backends (facade)"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = []
mem = ["dep:continuum-backend-mem"]
surreal-local = ["dep:continuum-backend-surreal"]
postgres = ["dep:continuum-backend-postgres"]
sqlite = ["dep:continuum-backend-sqlite"]
scylla = ["dep:continuum-backend-scylla"]
tikv-raw = ["dep:continuum-backend-tikv-raw"]
telemetry-console = ["dep:continuum-telemetry"]

[dependencies]
continuum-core = { path = "../continuum-core" }
continuum-telemetry = { path = "../continuum-telemetry", optional = true }
continuum-backend-mem = { path = "../continuum-backend-mem", optional = true }
continuum-backend-surreal = { path = "../continuum-backend-surreal", optional = true }
continuum-backend-postgres = { path = "../continuum-backend-postgres", optional = true }
continuum-backend-sqlite = { path = "../continuum-backend-sqlite", optional = true }
continuum-backend-scylla = { path = "../continuum-backend-scylla", optional = true }
continuum-backend-tikv-raw = { path = "../continuum-backend-tikv-raw", optional = true }

[dev-dependencies]
continuum-backend-mem = { path = "../continuum-backend-mem" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[[example]]
name = "quickstart"
required-features = ["mem"]

[[example]]
name = "router"
required-features = ["mem"]

[[example]]
name = "checkpoint_truncate"
required-features = ["mem"]

